# arlorobot

./: README.md
arlorobot_cartographer/: CMakeLists.txt  package.xml
arlorobot_cartographer/config/: arlorobot_cartographer.lua
arlorobot_cartographer/launch/: arlorobot_cartographer.launch
arlorobot_launch/: CMakeLists.txt  README.md  package.xml
arlorobot_launch/launch/: arlorobot_global.launch
arlorobot_msgs/: CMakeLists.txt  README.md  package.xml
arlorobot_msgs/msg/: Detection.msg  DetectionArray.msg  LandMark.msg  LandMarkArray.msg  detection.msg
kinect_acquisition/: CMakeLists.txt  README.md  package.xml
kinect_acquisition/launch/: kinect_acquisition.launch
kinect_acquisition/object_pose/script/: 3D_object_pose_rect_callback.py
object_pose/: CMakeLists.txt  README.md  package.xml
object_pose/script/: 3D_object_pose_callback.py  3D_object_pose_rect_callback.py  object_localization_callback.py
point_cloud_to_laser_scan/: CMakeLists.txt  package.xml
point_cloud_to_laser_scan/launch/: point_cloud_to_laser_scan.launch
yolo_object_detection/: CMakeLists.txt  README.md  package.xml
yolo_object_detection/script/: 3D_object_pose_callback.py  ros_image_color_callback.py  yolo_callback.py  yolo_object_detection_callback.py  yolo_object_detection_rect_callback.py
yolo_object_detection/script/cfg/: yolov3.cfg
yolo_object_detection/script/weights/: README.md
yolo_object_detection/script/yolo_modules/: __init__.py  bbox.py  darknet.py  preprocess.py
