<?xml version="1.0"?>
<package format="2">
  <name>arlorobot_cartographer</name>
  <version>0.0.0</version>
  <description>The arlorobot_cartographer package</description>

  <maintainer email="pau@todo.todo">pau</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cartographer</depend>
  <depend>cartographer_ros</depend>

</package>
