<?xml version="1.0"?>
<package format="2">
  <name>arlorobot_launch</name>
  <version>0.0.0</version>
  <description>The arlorobot_launch package</description>

  <maintainer email="pau.mila@uvic.cat">pau</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
